1586
I see you fellows do not run with bleeding edge trunk.  I checked in a fix for this a couple days ago, this is a duplicate of scala/bug#473 (which has a misleading title I should have changed.) It no longer compiles:
```scala
$$ scalac a.scala 
a.scala:23: error: super constructor cannot be passed a self reference unless parameter is declared by-name
case object Omega extends Succ(Omega) 
            ^
one error found
```
Say the word if you'd prefer a different fix.
